--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A base Hapi Server to get a NodeJS server setuo",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon index.ts",
+    "build": "tsc --project ./"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,11 @@
   },
   "homepage": "https://github.com/djknowles21/Base-Hapi-Server#readme",
   "dependencies": {
-    "@hapi/hapi": "^20.1.5"
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.11",
+    "express": "^4.17.1",
+    "nodeman": "^1.1.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
